
Slick 7.x-2.0-dev, 2015-11-07
-----------------------------
- #2610348 by IckZ: Colorbox not working when only one image is displayed.
- #2596599 by mparker17: Add link to settings page in .info file
  Oops, sorry, attribution!
- #2596599 by mparker17: Add link to settings page in .info file

Slick 7.x-2.0-dev, 2015-9-30
----------------------------
- Clarified several descriptions on form items, and elsewhere.
- Moved some contents of slick.field.inc into slick.global.inc to share with
  Slick views for its future enhancement with Media file like Slick fields.
- Added configurable optional core slick-theme.css and module slick.theme.css
  which are normally included by default along with skins.
- Removed problematic Editor links for Media file, since it is not displayed
  when cache enabled anyway.

Slick 7.x-2.0-dev, 2015-9-12
----------------------------
- #2567233 by espacecode: Grid options require Visible slides, otherwise no
  slides shown anymore.
  Added more information on Grid options about requiring Visible slides.

Slick 7.x-2.0-dev, 2015-9-11
----------------------------
- Issue #2566799 by quasi: Image linked to content should not be
  removed without colorbox/photobox.
- Cleaned up README.txt, and a few other things.

Slick 7.x-2.0-dev, 2015-9-09
----------------------------
- Merged DRY stuffs into slick_get_image().

Slick 7.x-2.0-dev, 2015-9-08
----------------------------
- Added hook_uninstall() since we now have a variable to delete.
- Added a configurable option using slick_ui.module to toggle slick admin css
  which can be accessed at: admin/config/media/slick/ui
- #2553385 by gausarts, xtfer: Slick CSS admin compatibility with contrib admin
  themes.

Slick 7.x-2.0-dev, 2015-9-07
----------------------------
- Made slick admin css optional. Execute the following anywhere once to disable
  slick admin stylings:
  variable_set('slick_admin_css', FALSE);

Slick 7.x-2.0-dev, 2015-9-06
----------------------------